se agregan tareas anteriores

--- a/taller4to/ejemplo.html
+++ b/taller4to/ejemplo.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		<img src="perro.jpg" alt="imagen de perrito">
+		<img src="perro.jpeg" alt="imagen de perrito">
 
 		<h6>Holaa!</h6>
 
