--- a/taller4to/pagina.html
+++ b/taller4to/pagina.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="estilo.css">
+		<link rel="stylesheet" href="style.css">
 		<!-- opcion 1
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
