taller de hoy, tarea

--- a/taller4to/pagina.html
+++ b/taller4to/pagina.html
@@ -4,23 +4,29 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
-		<!-- opcion 1
+
+		<!-- Para utilizar fuente de GoogleFonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-		-->
+
 		<title>Experimentos</title>
-		<!-- opción 2
+
+		<!--  Para utilizar fuente descargada en archivo .otf -->
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 		</style> 
-		-->
+
 	</head>
 
 	<body>
-		<h3>Hola a todos!</h3>
 
-		<a href="otraPagina.html" target="_blank"> se abre nueva página en la misma pestaña</a>
-		<a href="otraPagina.html">se abre nueva página en otra pestaña</a>
+		<h3>Hola a todos! (escrito con una fuente de GoogleFonts</h3>
+
+		<h4>Hola a todos! (escrito con una fuente descargada como archivo .otf)</h4>
+
+		<a href="otraPagina.html"> se abre nueva página en la misma pestaña</a>
+		<br>
+		<a href="otraPagina.html" target="_blank">se abre nueva página en otra pestaña</a>
 
 	</body>
 
