--- a/taller4to/pagina.html
+++ b/taller4to/pagina.html
@@ -11,7 +11,7 @@
 
 		<title>Experimentos</title>
 
-		<!--  Para utilizar fuente descargada en archivo .otf -->
+		<!--  Otra forma ara utilizar fuente google fonts -->
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 		</style> 
